z-index fix for small-nav
The carousel horizontal location overlays were showing when the small-nav was out.

The z-index for the small-nav container was set to 1. It must be _at least_ 16 to be over the carousel widget. I have set it to 20 for safety.

--- a/Complete Layouts/Base Layout/css/footbridge-additions.css
+++ b/Complete Layouts/Base Layout/css/footbridge-additions.css
@@ -80,7 +80,7 @@ a:hover {
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.33);
   position: relative;
   /* Box shadow doesn't show without a z-index */
-  z-index: 1; }
+  z-index: 20; }
 
 #small-navigation-container-1 > .pullout-menu-backdrop {
   top: 0;
